<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/controlbtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonBackRec"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/pushed_back_button"
                android:onClick="ButtonBackClick" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonHelp"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/pushed_help_button"
                android:onClick="ButtonHelpClick" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/MainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ContainerSettingsButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/textMod"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/line_style" />

            <LinearLayout
                android:id="@+id/ContainerModeButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="45dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ClassicButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/pushed_button_green"
                    android:onClick="ButtonClassicClick"
                    android:text="@string/Classic"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonMagic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_status_style_green"
                    android:onClick="ButtonMagicClick"
                    android:text="@string/magic"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textSizes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/sizeFieldString"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/line_style" />

            <LinearLayout
                android:id="@+id/ContainerSizes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="45dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2x3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/pushed_button_green"
                        android:onClick="Button2x3Click"
                        android:text="@string/_2x3"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2x4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button2x4Click"
                        android:text="@string/_2x4"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2x5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button2x5Click"
                        android:text="@string/_2x5"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2x6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button2x6Click"
                        android:text="@string/_2x6"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button2x7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button2x7Click"
                        android:text="@string/_2x7"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2x8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button2x8Click"
                        android:text="@string/_2x8"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button3x3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button3x3Click"
                        android:text="@string/_3x3"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button3x4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button3x4Click"
                        android:text="@string/_3x4"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button3x5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button3x5Click"
                        android:text="@string/_3x5"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/button4x4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_status_style_green"
                        android:onClick="Button4x4Click"
                        android:text="@string/_4x4"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textDiff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/stringDiff"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/line_style" />

            <LinearLayout
                android:id="@+id/ContainerDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonEz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/pushed_button_green"
                    android:onClick="ButtonEzClick"
                    android:text="@string/Ez"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_status_style_green"
                    android:onClick="ButtonNormalClick"
                    android:text="@string/Normal"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonHard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_status_style_green"
                    android:onClick="ButtonHardClick"
                    android:text="@string/Hard"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/startContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStart"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_status_style_green"
            android:onClick="ButtonStartGameClick"
            android:text="@string/StartGame"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>