<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonBackRec"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/pushed_back_button"
                android:onClick="ButtonBackClick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Размерность: "
                android:textColor="@color/White"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/dropdown_status_style"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:text="@string/Classic"
            android:textColor="@color/White"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/pushed_button_green" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ClassicEz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Ez"
                android:textColor="@color/White"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/ClassicNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Normal"
                android:textColor="@color/White"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/ClassicHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hard"
                android:textColor="@color/White"
                android:textSize="26sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewMagSq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:text="@string/magic"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/MagSqLine"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/pushed_button_green"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/magicrec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/MagicEz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Ez"
                android:textColor="@color/White"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/MagicNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Normal"
                android:textColor="@color/White"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/MagicHard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hard"
                android:textColor="@color/White"
                android:textSize="26sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>